Get started java9 (#2392)
* Propose Java 9 command line

* Simplify statement